// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignedIn matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    displayName="Chase"
    isContributor={false}
    logOut={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="log-in-out"
>
          <p
                    className="welcome-text"
          >
                    Welcome 
                    Chase
          </p>
</div>,
        <div
          className="sign-out-btn"
          onClick={[Function]}
>
          <span>
                    Log out
          </span>
</div>,
      ],
      "className": "signed-in-state",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="welcome-text"
>
              Welcome 
              Chase
</p>,
            false,
          ],
          "className": "log-in-out",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Welcome ",
                "Chase",
              ],
              "className": "welcome-text",
            },
            "ref": null,
            "rendered": Array [
              "Welcome ",
              "Chase",
            ],
            "type": "p",
          },
          false,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            Log out
</span>,
          "className": "sign-out-btn",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Log out",
          },
          "ref": null,
          "rendered": "Log out",
          "type": "span",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="log-in-out"
>
            <p
                        className="welcome-text"
            >
                        Welcome 
                        Chase
            </p>
</div>,
          <div
            className="sign-out-btn"
            onClick={[Function]}
>
            <span>
                        Log out
            </span>
</div>,
        ],
        "className": "signed-in-state",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="welcome-text"
>
                Welcome 
                Chase
</p>,
              false,
            ],
            "className": "log-in-out",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Welcome ",
                  "Chase",
                ],
                "className": "welcome-text",
              },
              "ref": null,
              "rendered": Array [
                "Welcome ",
                "Chase",
              ],
              "type": "p",
            },
            false,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              Log out
</span>,
            "className": "sign-out-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Log out",
            },
            "ref": null,
            "rendered": "Log out",
            "type": "span",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SignedIn matches snapshot with isContributor = true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    displayName="Chase"
    isContributor={true}
    logOut={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="log-in-out"
>
          <p
                    className="welcome-text"
          >
                    Welcome 
                    Chase
          </p>
          <p
                    className="verifed-text"
          >
                    <FontAwesomeIcon
                              border={false}
                              className="verified-icon"
                              fixedWidth={false}
                              flip={null}
                              icon={
                                        Array [
                                                  "far",
                                                  "check-circle",
                                                ]
                              }
                              listItem={false}
                              mask={null}
                              name=""
                              pull={null}
                              pulse={false}
                              rotation={null}
                              size={null}
                              spin={false}
                              symbol={false}
                              transform={null}
                    />
                    verified contributor
          </p>
</div>,
        <div
          className="sign-out-btn"
          onClick={[Function]}
>
          <span>
                    Log out
          </span>
</div>,
      ],
      "className": "signed-in-state",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="welcome-text"
>
              Welcome 
              Chase
</p>,
            <p
              className="verifed-text"
>
              <FontAwesomeIcon
                            border={false}
                            className="verified-icon"
                            fixedWidth={false}
                            flip={null}
                            icon={
                                          Array [
                                                        "far",
                                                        "check-circle",
                                                      ]
                            }
                            listItem={false}
                            mask={null}
                            name=""
                            pull={null}
                            pulse={false}
                            rotation={null}
                            size={null}
                            spin={false}
                            symbol={false}
                            transform={null}
              />
              verified contributor
</p>,
          ],
          "className": "log-in-out",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Welcome ",
                "Chase",
              ],
              "className": "welcome-text",
            },
            "ref": null,
            "rendered": Array [
              "Welcome ",
              "Chase",
            ],
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <FontAwesomeIcon
                  border={false}
                  className="verified-icon"
                  fixedWidth={false}
                  flip={null}
                  icon={
                                    Array [
                                                      "far",
                                                      "check-circle",
                                                    ]
                  }
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  symbol={false}
                  transform={null}
/>,
                "verified contributor",
              ],
              "className": "verifed-text",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "border": false,
                  "className": "verified-icon",
                  "fixedWidth": false,
                  "flip": null,
                  "icon": Array [
                    "far",
                    "check-circle",
                  ],
                  "listItem": false,
                  "mask": null,
                  "name": "",
                  "pull": null,
                  "pulse": false,
                  "rotation": null,
                  "size": null,
                  "spin": false,
                  "symbol": false,
                  "transform": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "verified contributor",
            ],
            "type": "p",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            Log out
</span>,
          "className": "sign-out-btn",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Log out",
          },
          "ref": null,
          "rendered": "Log out",
          "type": "span",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="log-in-out"
>
            <p
                        className="welcome-text"
            >
                        Welcome 
                        Chase
            </p>
            <p
                        className="verifed-text"
            >
                        <FontAwesomeIcon
                                    border={false}
                                    className="verified-icon"
                                    fixedWidth={false}
                                    flip={null}
                                    icon={
                                                Array [
                                                            "far",
                                                            "check-circle",
                                                          ]
                                    }
                                    listItem={false}
                                    mask={null}
                                    name=""
                                    pull={null}
                                    pulse={false}
                                    rotation={null}
                                    size={null}
                                    spin={false}
                                    symbol={false}
                                    transform={null}
                        />
                        verified contributor
            </p>
</div>,
          <div
            className="sign-out-btn"
            onClick={[Function]}
>
            <span>
                        Log out
            </span>
</div>,
        ],
        "className": "signed-in-state",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="welcome-text"
>
                Welcome 
                Chase
</p>,
              <p
                className="verifed-text"
>
                <FontAwesomeIcon
                                border={false}
                                className="verified-icon"
                                fixedWidth={false}
                                flip={null}
                                icon={
                                                Array [
                                                                "far",
                                                                "check-circle",
                                                              ]
                                }
                                listItem={false}
                                mask={null}
                                name=""
                                pull={null}
                                pulse={false}
                                rotation={null}
                                size={null}
                                spin={false}
                                symbol={false}
                                transform={null}
                />
                verified contributor
</p>,
            ],
            "className": "log-in-out",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Welcome ",
                  "Chase",
                ],
                "className": "welcome-text",
              },
              "ref": null,
              "rendered": Array [
                "Welcome ",
                "Chase",
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <FontAwesomeIcon
                    border={false}
                    className="verified-icon"
                    fixedWidth={false}
                    flip={null}
                    icon={
                                        Array [
                                                            "far",
                                                            "check-circle",
                                                          ]
                    }
                    listItem={false}
                    mask={null}
                    name=""
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    symbol={false}
                    transform={null}
/>,
                  "verified contributor",
                ],
                "className": "verifed-text",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "border": false,
                    "className": "verified-icon",
                    "fixedWidth": false,
                    "flip": null,
                    "icon": Array [
                      "far",
                      "check-circle",
                    ],
                    "listItem": false,
                    "mask": null,
                    "name": "",
                    "pull": null,
                    "pulse": false,
                    "rotation": null,
                    "size": null,
                    "spin": false,
                    "symbol": false,
                    "transform": null,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "verified contributor",
              ],
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              Log out
</span>,
            "className": "sign-out-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Log out",
            },
            "ref": null,
            "rendered": "Log out",
            "type": "span",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
